# kernel_motorola_miami

./: Makefile
android/: abi_gki_aarch64_qcom
arch/arm64/: Kconfig
drivers/android/: binder.c
drivers/backlight/lm3697/: Kbuild
drivers/backlight/sm5350/: Kbuild
drivers/block/: loop.c
drivers/clk/: clk.c
drivers/cpuidle/: lpm-levels.c
drivers/fm/: Kconfig
drivers/hid/: hid-core.c
drivers/input/misc/: Kconfig  Makefile
drivers/leds/: Kconfig  Makefile
drivers/leds/aw2033/: Kbuild  Kconfig
drivers/misc/: Kconfig  Makefile
drivers/misc/awinic/: Kconfig  Makefile
drivers/misc/ldo_vibrator_mmi/: Kconfig
drivers/mmc/core/: host.c
drivers/moto_f_usbnet/: Kbuild
drivers/nfc/: Kconfig  Makefile
drivers/power/: Kconfig  Makefile
drivers/regulator/: Kconfig  Makefile
drivers/rpmsg/: qcom_glink_slatecom.c
fs/erofs/: zdata.c  zdata.h
fs/f2fs/: inode.c
include/drm/: drm_mipi_dsi.h
include/linux/: hid.h  pm_runtime.h  timer.h  touchscreen_mmi.h  trace_events.h
include/net/: addrconf.h  sock.h
kernel/: cpu.c
kernel/events/: core.c
kernel/power/: suspend.c
kernel/trace/: ring_buffer.c
mm/: filemap.c  memory.c
net/bridge/: br_forward.c
net/ipv4/: ip_tunnel.c
net/ipv6/: route.c
net/netfilter/: nf_tables_api.c
security/selinux/: hooks.c
techpack/datarmnet/: BUILD.bazel  datarmnet_dlkm_vendor_board.mk  define_modules.bzl
techpack/datarmnet-ext/: Makefile  datarmnet_ext_dlkm_vendor_board.mk
techpack/datarmnet-ext/mem/: Android.mk  BUILD.bazel  define_mem.bzl  rmnet_mem_main.c  rmnet_mem_pool.c  rmnet_mem_priv.h
(+125 files in other folders)
